feat: upgrade to springboot 3.0.1